src/styles/global.css
:root {
  --gap-quarter: 0.25rem;
  --gap-half: 0.5rem;
  --gap: 1rem;
  --gap-double: 2rem;

  --bg: #fff;
  --fg: #000;
  --accents-1: #111;
  --accents-2: #333;
  --accents-3: #666;
  --accents-4: #888;
  --main-1: #0070f3;
  --main-2: #3291ff;
  --geist-foreground: #000;

  --radius: 8px;

  --font-sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  --font-mono: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
    Bitstream Vera Sans Mono, Courier New, monospace;
}

* {
  box-sizing: border-box;
}

html,
body {
  padding: 0;
  margin: 0;
  font-size: 20px;
}

body {
  min-height: 100vh;
  background: var(--bg);
  color: var(--fg);
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

@import 'dracula.module.css';

.links {
  display: flex;
  text-align: center;
  justify-content: center;
  align-items: center;
}

figure {
  font-size: 0.85rem;
  color: #999;
  line-height: 1.8;
}

figure {
  font-size: 0.85rem;
  color: #999;
}

a {
  color: var(--main-1);
  text-decoration: none;
}

a:hover {
  color: var(--main-2);
}

p > a {
  border-bottom: 1px dotted #ddd;
}

.links {
  margin-top: var(--gap);
}

mark {
  padding: var(--gap-quarter);
  border-radius: var(--radius);
  background: rgba(247, 212, 255, 0.8);
}

.title {
  text-align: center;
}

.logo :global(svg) {
  max-width: calc(100vw - var(--gap-double));
}

h1 {
  margin: var(--gap-double) 0 calc(0.5 * var(--gap)) 0;
  font-size: 2.25rem;
  font-weight: 800;
  letter-spacing: -0.05rem;
}

h2 {
  font-weight: 300;
  font-size: 1.25rem;
  letter-spacing: -0.02rem;
  color: var(--accents-4);
}

.video {
  width: 1080px;
  max-width: calc(100vw - 40px);
  transform: translateX(-50%);
  margin-left: 50%;
  text-align: center;
  cursor: pointer;
}

.video :global(video) {
  max-width: 100%;
  max-height: 90vh;
  outline: none;
}

p,
li {
  color: #555;
  font-weight: 400;
  font-size: 0.94rem;
  line-height: 1.7;
}

pre {
  white-space: pre;
}

pre :global(code) {
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}

code {
  font-size: 0.8rem;
  background: #f1f1f1;
  padding: 0.2rem;
  border-radius: var(--radius);
  font-family: var(--font-mono);
}

@media (max-width: 600px) {
  h2 {
    font-size: 0.95rem;
    letter-spacing: 0;
  }
}

footer {
  padding: 2em 0;
  text-align: center;
  color: #777777;
  font-size: 0.7em;
  margin-top: 5vh;
  position: relative;
  clear: both;
  bottom: 0;
}

blockquote {
  margin: 0 0 0 -23px;
  padding: 0 0 0 20px;
  color: rgba(0, 0, 0, 0.6);
  border-left: 3px solid rgba(0, 0, 0, 0.8);
}

hr {
  margin-top: 0 50px;
  border: solid rgba(0, 0, 0, 0.1);
  border-width: 1px 0 0;
}

